Added a title and biography paragraph

--- a/Index.html
+++ b/Index.html
@@ -5,11 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Page</title>
+    <title>Piyusha Perera - Biography</title>
 </head>
 
 <body>
+    <header>
+        <h1>The Man, The Myth, The Legend</h1>
+        <p>The story of Piyusha</p>
+    </header>
 
+    <section>
+        <h2>Biography :</h2>
+
+        <p>
+
+            I <em>am born</em> in 2003, Im currently Studying <em>Computer Programming</em>. I love going to gym during my spare time. I like trying new Food.
+        </p>
+    </section>
 </body>
 
 </html>
