Wrote three Paragraphs into it.

--- a/Index.html
+++ b/Index.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <h1>The Man, The Myth, The Legend</h1>
-        <p>The story of Piyusha</p>
+        <h1>Student Of Georgian College</h1>
+        <p>My Life Story</p>
     </header>
 
     <section>
@@ -19,7 +19,18 @@
 
         <p>
 
-            I <em>am born</em> in 2003, Im currently Studying <em>Computer Programming</em>. I love going to gym during my spare time. I like trying new Food.
+            I <em>am born</em> in 2003, Im currently Studying <em>Computer Programming</em>. I am born in Sri lanka. It
+            is Nice country. My mom and dad both from Sri lanka as well. I have a one yonger sibling.
+        </p>
+        <p>
+            I have reached to the highest level of Basketball in my high school. I played basketball since i was 8 years
+            old. I was doing a major roll in the team in my final year. And also, i was MVP of the last tournament i
+            played in my high school.
+        </p>
+        <p>
+            I want to get good job which i can develop apps. My uncle does something similar to that so I just want to
+            reach to high level of coding and be a Programmer. Make my own apps and develop them.
+
         </p>
     </section>
 </body>
